content/cli/v8/commands/npm-set-script.mdx
---
title: npm-set-script
section: 1
description: Set tasks in the scripts section of package.json
github_repo: npm/cli
github_branch: release/v8
github_path: docs/lib/content/commands/npm-set-script.md
redirect_from:
  - /cli-documentation/v8/cli-commands/npm-set-script
  - /cli-documentation/v8/cli-commands/set-script
  - /cli-documentation/v8/commands/npm-set-script
  - /cli-documentation/v8/commands/set-script
  - /cli-documentation/v8/npm-set-script
  - /cli-documentation/v8/set-script
  - /cli/v8/cli-commands/npm-set-script
  - /cli/v8/cli-commands/set-script
  - /cli/v8/commands/set-script
  - /cli/v8/npm-set-script
  - /cli/v8/set-script
---

### Synopsis

An npm command that lets you create a task in the `scripts` section of the `package.json`.

Deprecated.

```bash
npm set-script [<script>] [<command>]
```

**Example:**

- `npm set-script start "http-server ."`

```json
{
  "name": "my-project",
  "scripts": {
    "start": "http-server .",
    "test": "some existing value"
  }
}
```

### Configuration

#### `workspace`

- Default:
- Type: String (can be set multiple times)

Enable running a command in the context of the configured workspaces of the current project while filtering by running only the workspaces defined by this configuration option.

Valid values for the `workspace` config are either:

- Workspace names
- Path to a workspace directory
- Path to a parent workspace directory (will result in selecting all workspaces within that folder)

When set for the `npm init` command, this may be set to the folder of a workspace which does not yet exist, to create the folder and set it up as a brand new workspace within the project.

This value is not exported to the environment for child processes.

#### `workspaces`

- Default: null
- Type: null or Boolean

Set to true to run the command in the context of **all** configured workspaces.

Explicitly setting this to false will cause commands like `install` to ignore workspaces altogether. When not set explicitly:

- Commands that operate on the `node_modules` tree (install, update, etc.) will link workspaces into the `node_modules` folder. - Commands that do other things (test, exec, publish, etc.) will operate on the root project, _unless_ one or more workspaces are specified in the `workspace` config.

This value is not exported to the environment for child processes.

#### `include-workspace-root`

- Default: false
- Type: Boolean

Include the workspace root when workspaces are enabled for a command.

When false, specifying individual workspaces via the `workspace` config, or all workspaces via the `workspaces` flag, will cause npm to operate only on the specified workspaces, and not on the root project.

This value is not exported to the environment for child processes.

### See Also

- [npm run-script](/cli/v8/commands/npm-run-script)
- [npm install](/cli/v8/commands/npm-install)
- [npm test](/cli/v8/commands/npm-test)
- [npm start](/cli/v8/commands/npm-start)
